Fixed admin menu alignment issue

--- a/resources/sass/custom-style/_shared-styles.scss
+++ b/resources/sass/custom-style/_shared-styles.scss
@@ -293,5 +293,3 @@ body {
     overflow: hidden;
     border-bottom: 0px solid var(--color-contrast-low);
 }
-
-#second-menu {width:inherit;}
